feat: new API specs and endpoints
